Styled node editor, fixed text input clipping issue on gojs node

--- a/src/renderer/styles/Diagram.css
+++ b/src/renderer/styles/Diagram.css
@@ -7,3 +7,9 @@
   width:100%; 
   height: 100%;
 }
+
+textarea.goTXarea {
+  resize: none;
+  overflow: hidden;
+  border-radius: 3px;
+}
